--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@
     min-height: 500px;
 }
 
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
+.home-card{
+  margin-top: 50px;
+}
 /*Footer css*/
 
 .header-font {
@@ -21,44 +29,12 @@
 
 
 .footer {
-	background: #EDEFF1;
-	height: 2.5rem;
-	padding-bottom: 30px;
-	position: absolute;
-	width: 100%;
-  bottom: 0;
-	border-bottom: 1px solid #CCCCCC;
-	border-top: 1px solid #DDDDDD;
-}
-.footer p {
-	margin: 0;
-}
-.footer img {
-	max-width: 100%;
-}
-.footer h3 {
-	border-bottom: 1px solid #BAC1C8;
-	color: #54697E;
-	font-size: 18px;
-	font-weight: 600;
-	line-height: 27px;
-	padding: 40px 0 10px;
-	text-transform: uppercase;
-}
-.footer ul {
-	font-size: 13px;
-	list-style-type: none;
-	margin-left: 0;
-	padding-left: 0;
-	margin-top: 15px;
-	color: #7F8C8D;
-}
-.footer ul li a {
-	padding: 0 0 5px 0;
-	display: block;
-}
-.footer a {
-	color: #78828D
+   position: fixed; 
+   padding: 10px 10px 0px 10px; 
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
+   background:#6cf;
 }
 
 /*Contacts CSS*/
